--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -10,3 +10,37 @@
   background-color: dodgerblue !important;
   color: white !important;
 }
+
+/*--------------------------------------------------------------------------*/
+/* Code for userContent.css FILE - */
+@-moz-document url(about:home), url(about:newtab), url(about:privatebrowsing){
+
+.search-wrapper {
+  display: none;
+}
+
+.ds-top-sites {
+  display: none;
+}
+
+.click-target-container *,
+.top-sites-list * {
+  color: #fff !important;
+  text-shadow: 2px 2px 2px #222 !important;
+}
+
+
+body::before {
+  content: "";
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* background: #f9a no-repeat url(./res/wlop-princess-watching-city-standing-from-the-back.jpeg) center; */
+  background: #f9a no-repeat url(./res/wlop-darkskin-warriors-pharoahs.jpg) center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+}
+
